# TreeSHAPBench

./: .gitignore  EXPERIMENTS.md  README.md  analysis.ipynb  benchmark_colab.ipynb  benchmark_example.py  build_analysis_nb.py  build_colab_nb.py  requirements.txt  run_all.sh  runner.py
.claude/: settings.json
adapters/: __init__.py
notebooks/: FastTreeSHAP_vs_shapiq_Census_Income.ipynb  shap_vs_shapiq_Census_Income.ipynb  shapiq.ipynb  woodelf_vs_shapiq_Census_Income.ipynb
src/: benchmarker.py  data_loader.py  fasttreeshap_runner.py
treeshap-bench/: README.md  benchmark_colab.ipynb  build_colab_nb.py  pyproject.toml
treeshap_bench/: __init__.py  analysis.ipynb  benchmark_colab.ipynb  build_analysis_nb.py  build_colab_nb.py
treeshap_bench/adapters/: __init__.py  gpu_adapter.py  shapiq_adapter.py  stubs.py
treeshap_bench/treeshap_bench/: core.py  data.py
treeshap_bench/treeshap_bench/adapters/: fasttreeshap_adapter.py  stubs.py
