[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "treeshap-bench"
version = "0.1.0"
description = "Extensible benchmark harness for tree-SHAP libraries (fasttreeshap, shapiq, ...)."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "joblib",
]

# Targets are intentionally optional so each can live in its own environment.
[project.optional-dependencies]
fasttreeshap = ["numpy<2", "fasttreeshap==0.1.6"]
shapiq-released = ["shapiq==1.4.1"]
models = ["xgboost", "lightgbm"]
notebook = ["matplotlib", "nbformat"]

[tool.setuptools.packages.find]
include = ["treeshap_bench*"]
